(05/08) Javascript no HTML

--- a/01-ola-mundo.html
+++ b/01-ola-mundo.html
@@ -7,6 +7,13 @@
     <title>
         Minha primeira página html na facul
     </title>
+    <script>
+        // let serve para declarar uma variável
+        //  nome é uma variável
+        let nome = prompt('Qual é o seu nome?  ')
+        alert('Olá, ' + nome) 
+    </script>
+
 </head>
 <body>
 <h1>Minha primeira pagina HTML na facul</h1>
